# Personal-AI-Employee-Hackathon-0-Autonomous-FTE

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/skills/process-inbox/: SKILL.md
.claude/skills/start-file-watcher/: SKILL.md
.claude/skills/update-dashboard/: SKILL.md
AI_Employee_Vault/: Company_Handbook.md  Dashboard.md
AI_Employee_Vault/Done/: MSG_test_inbox_20260401_processed.md  REPORT_policy_doc_20260401.md
watchers/: __init__.py  base_watcher.py  filesystem_watcher.py
