[project]
name = "digital-fte"
version = "0.1.0"
description = "Digital FTE - Personal AI Employee (Bronze Tier)"
requires-python = ">=3.13"
dependencies = [
    "watchdog>=4.0.0",
]

[project.optional-dependencies]
gmail = [
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-api-python-client>=2.0.0",
]
dev = [
    "pytest>=8.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["watchers"]
